--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -38,7 +38,7 @@
             app:layout_constraintGuide_percent="0.5" />
 
         <TextView
-            android:id="@+id/textViewTitleMovie"
+            android:id="@+id/tvTitleMovieDetail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -57,10 +57,10 @@
             android:layout_marginTop="8dp"
             android:text="Оригинальное название:"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewTitleMovie" />
+            app:layout_constraintTop_toBottomOf="@+id/tvTitleMovieDetail" />
 
         <TextView
-            android:id="@+id/textViewOriginalTitleMovie"
+            android:id="@+id/tvOriginalTitleMovieDetail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -69,7 +69,7 @@
             android:text="TextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
-            app:layout_constraintTop_toBottomOf="@+id/textViewTitleMovie" />
+            app:layout_constraintTop_toBottomOf="@+id/tvTitleMovieDetail" />
 
         <TextView
             android:id="@+id/textViewLabelRatingMovie"
@@ -79,17 +79,17 @@
             android:layout_marginTop="8dp"
             android:text="Рейтинг:"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitleMovie" />
+            app:layout_constraintTop_toBottomOf="@+id/tvOriginalTitleMovieDetail" />
 
         <TextView
-            android:id="@+id/textViewRatingMovie"
+            android:id="@+id/tvRatingMovieDetail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="TextView"
             app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
-            app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitleMovie" />
+            app:layout_constraintTop_toBottomOf="@+id/tvOriginalTitleMovieDetail" />
 
         <TextView
             android:id="@+id/textViewLabelReleaseDateMovie"
@@ -99,10 +99,10 @@
             android:layout_marginTop="8dp"
             android:text="Дата релиза:"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewRatingMovie" />
+            app:layout_constraintTop_toBottomOf="@+id/tvRatingMovieDetail" />
 
         <TextView
-            android:id="@+id/textViewReleaseDateMovie"
+            android:id="@+id/tvReleaseDateMovieDetail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -111,7 +111,7 @@
             android:text="TextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
-            app:layout_constraintTop_toBottomOf="@+id/textViewRatingMovie" />
+            app:layout_constraintTop_toBottomOf="@+id/tvRatingMovieDetail" />
 
         <TextView
             android:id="@+id/textViewLabelDescriptionMovie"
@@ -121,10 +121,10 @@
             android:layout_marginTop="8dp"
             android:text="Описание:"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewReleaseDateMovie" />
+            app:layout_constraintTop_toBottomOf="@+id/tvReleaseDateMovieDetail" />
 
         <TextView
-            android:id="@+id/textViewOverviewMovie"
+            android:id="@+id/tvOverviewMovieDetail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
