--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -50,7 +50,11 @@
         android:id="@+id/showFragment2"
         android:name="com.example.destination.ShowFragment"
         android:label="fragment_show"
-        tools:layout="@layout/fragment_show" />
+        tools:layout="@layout/fragment_show" >
+        <action
+            android:id="@+id/action_showFragment2_to_showDetailFragment"
+            app:destination="@id/showDetailFragment" />
+    </fragment>
     <fragment
         android:id="@+id/settingFragment"
         android:name="com.example.destination.SettingFragment"
@@ -65,5 +69,14 @@
             android:id="@+id/action_movieDetailFragment_to_homeFragment2"
             app:destination="@id/movieFragment"
             app:popUpToInclusive="false" />
+    </fragment>
+    <fragment
+        android:id="@+id/showDetailFragment"
+        android:name="com.example.destination.ShowDetailFragment"
+        android:label="fragment_show_detail"
+        tools:layout="@layout/fragment_show_detail" >
+        <action
+            android:id="@+id/action_showDetailFragment_to_showFragment2"
+            app:destination="@id/showFragment2" />
     </fragment>
 </navigation>
