--- a/app/src/main/res/layout/fragment_show_detail.xml
+++ b/app/src/main/res/layout/fragment_show_detail.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavViewAnonim"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavViewAnonimShow"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
 
