--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -37,7 +37,7 @@
                 android:layout_marginTop="8dp"
                 android:text="Название:"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageViewAddToFavouriteMovie" />
+                app:layout_constraintTop_toBottomOf="@+id/ivAddToFavouriteMovie" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guidelineCenter"
@@ -56,7 +56,7 @@
                 android:text="TextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
-                app:layout_constraintTop_toBottomOf="@+id/imageViewAddToFavouriteMovie" />
+                app:layout_constraintTop_toBottomOf="@+id/ivAddToFavouriteMovie" />
 
             <TextView
                 android:id="@+id/textViewLabelOriginalTitleMovie"
@@ -143,7 +143,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textViewLabelDescriptionMovie" />
 
             <ImageView
-                android:id="@+id/imageViewAddToFavouriteMovie"
+                android:id="@+id/ivAddToFavouriteMovie"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
@@ -152,6 +152,15 @@
                 app:layout_constraintEnd_toEndOf="@+id/imageViewBigPosterMovie"
                 app:layout_constraintTop_toBottomOf="@+id/imageViewBigPosterMovie"
                 app:srcCompat="@drawable/icons8_23" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvReviewAdapter"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:layout_margin="10dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintTop_toBottomOf="@+id/textViewLabelDescriptionMovie" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -165,6 +174,8 @@
         tools:ignore="MissingConstraints"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
