--- a/app/src/main/res/layout/fragment_show_detail.xml
+++ b/app/src/main/res/layout/fragment_show_detail.xml
@@ -142,6 +142,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textViewLabelDescriptionShow" />
 
+
+
             <ImageView
                 android:id="@+id/imageViewAddToFavouriteShow"
                 android:layout_width="wrap_content"
@@ -153,6 +155,25 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageViewBigPosterShow"
                 app:srcCompat="@drawable/icons8_23" />
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvTrailerShow"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_margin="10dp"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintTop_toBottomOf="@+id/tvOverviewShowDetail" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvReviewsShow"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_margin="10dp"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintTop_toBottomOf="@+id/rvTrailerShow"
+                tools:layout_editor_absoluteX="10dp" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
@@ -160,8 +181,10 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavViewAnonimShow"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:ignore="MissingConstraints"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"/>
