--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -37,7 +37,7 @@
                 android:layout_marginTop="8dp"
                 android:text="Название:"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ivAddToFavouriteMovie" />
+                app:layout_constraintTop_toBottomOf="@+id/ivChangeToFavouriteMovie" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guidelineCenter"
@@ -56,7 +56,7 @@
                 android:text="TextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
-                app:layout_constraintTop_toBottomOf="@+id/ivAddToFavouriteMovie" />
+                app:layout_constraintTop_toBottomOf="@+id/ivChangeToFavouriteMovie" />
 
             <TextView
                 android:id="@+id/textViewLabelOriginalTitleMovie"
@@ -143,7 +143,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textViewLabelDescriptionMovie" />
 
             <ImageView
-                android:id="@+id/ivAddToFavouriteMovie"
+                android:id="@+id/ivChangeToFavouriteMovie"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
@@ -151,7 +151,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/imageViewBigPosterMovie"
                 app:layout_constraintEnd_toEndOf="@+id/imageViewBigPosterMovie"
                 app:layout_constraintTop_toBottomOf="@+id/imageViewBigPosterMovie"
-                app:srcCompat="@drawable/icons8_23" />
+                app:srcCompat="@drawable/icons8_heart_white" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvTrailerMovie"
