--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -12,6 +12,7 @@
         android:id="@+id/tvMoviesFavorites"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:text="Movies"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,6 +43,7 @@
         android:id="@+id/rvFavoritesMovies"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavViewAnonim"
         app:layout_constraintTop_toBottomOf="@+id/swFavorites" />
@@ -51,6 +53,7 @@
         android:layout_width="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_height="0dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavViewAnonim"
         app:layout_constraintTop_toBottomOf="@+id/swFavorites" />
 
