--- a/app/src/main/res/layout/fragment_show_detail.xml
+++ b/app/src/main/res/layout/fragment_show_detail.xml
@@ -33,11 +33,10 @@
                 android:id="@+id/textViewLabelTiteShow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
                 android:text="Название:"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageViewAddToFavouriteShow" />
+                app:layout_constraintBottom_toBottomOf="@+id/tvTitleShowDetail"
+                app:layout_constraintStart_toStartOf="@+id/textViewLabelOriginalTitleShow"
+                app:layout_constraintTop_toTopOf="@+id/tvTitleShowDetail" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guidelineCenter"
@@ -51,12 +50,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:text="TextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
-                app:layout_constraintTop_toBottomOf="@+id/imageViewAddToFavouriteShow" />
+                app:layout_constraintTop_toBottomOf="@+id/ivChangeToFavouriteShow" />
 
             <TextView
                 android:id="@+id/textViewLabelOriginalTitleShow"
@@ -162,7 +160,7 @@
                 android:layout_margin="10dp"
                 android:orientation="vertical"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintTop_toBottomOf="@+id/imageViewBigPosterShow"
+                app:layout_constraintTop_toBottomOf="@+id/tvOverviewShowDetail"
                 tools:layout_editor_absoluteX="10dp" />
 
             <androidx.recyclerview.widget.RecyclerView
