--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -159,6 +159,7 @@
                 android:layout_height="0dp"
                 android:layout_margin="10dp"
                 android:orientation="vertical"
+                android:nestedScrollingEnabled="false"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintTop_toBottomOf="@+id/tvOverviewMovieDetail"
                 tools:layout_editor_absoluteX="10dp" />
@@ -169,6 +170,7 @@
                 android:layout_height="0dp"
                 android:layout_margin="10dp"
                 android:orientation="vertical"
+                android:nestedScrollingEnabled="false"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintTop_toBottomOf="@+id/rvTrailerMovie"
                 tools:layout_editor_absoluteX="10dp" />
