--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -9,4 +9,10 @@
         <item>reply</item>
         <item>reply_all</item>
     </string-array>
+
+    <string-array name="thems">
+        <item>Лайт</item>
+        <item>Темная</item>
+
+    </string-array>
 </resources>
